infra/k3s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
