infra/k3s/base/20-external-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-service
  namespace: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-service
  template:
    metadata:
      labels:
        app: external-service
    spec:
      serviceAccountName: sa-external
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: external-service
          image: devsecops-external:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4001
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
