infra/k3s/base/12-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: devsecops
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
