infra/k3s/base/70-np-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-default-deny
  namespace: devsecops
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
