infra/k3s/base/74-np-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-external
  namespace: devsecops
spec:
  podSelector:
    matchLabels:
      app: external-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api
      ports:
        - protocol: TCP
          port: 4001
